@@ -100,6 +100,12 @@ class CSSContainer(list):
         else:
             super(CSSContainer, self).append(Stylesheet(obj, None, 'stylesheet'))
 
+    def insert(self, index, other):
+        warnings.warn('builder.css_files is deprecated. '
+                      'Please use app.add_stylesheet() instead.',
+                      RemovedInSphinx20Warning)
+        self.insert(index, other)
+
     def extend(self, other):
         warnings.warn('builder.css_files is deprecated. '
                       'Please use app.add_stylesheet() instead.',
