@@ -26,6 +26,7 @@ Bugs fixed
   ``latexmk``) aborted earlier in case of LaTeX errors than was the case with
   1.5 series, due to hard-coded usage of ``--halt-on-error`` option. (refs #3695)
 * #3683: sphinx.websupport module is not provided by default
+* #3683: Failed to build document if builder.css_file.insert() is called
 
 Testing
 --------
